--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,7 +16,7 @@
 					<div class="col-12">
 						<h2 class="products-title">Novedades</h2>
 					</div>
-					<% for (let i=0; i < (lista.length > 4 ? 4: lista.length); i++) { %>
+					<% for (let i=0; i < (lista.length >= 3 ? 3: lista.length); i++) { %>
 						<div class="col-12 col-sm-6 col-lg-3" id="productos">
 							<section class="product-box">
 								<a href="/product">
