--- a/views/login.ejs
+++ b/views/login.ejs
@@ -12,10 +12,23 @@
               <div class="form-group">
                 <label for="email">Email</label>
                 <input required minlength="4" type="email" name="email" id="email" class="form-control" minlength="4">
+                  <!-- Middlewars:  				
+                  <% if (locals.errors && errors.email) { %>
+                  <div class="error-msg">
+                    <%= errors.email.msg %>                                
+                          
+                  <% } %> --> 
               </div>
               <div class="form-group">
                 <label for="password">Contraseña</label>
                 <input required minlength="4" type="password" name="password" id="password" class="form-control">
+                <!-- Middlewars:  				
+                  <% if (locals.errors && errors.email) { %>
+                  <div class="error-msg">
+                    <%= errors.password.msg %>                                
+                          
+                  <% } %> --> 
+                </div>  
               </div>
               <div class="form-group">
                 <label for="remember">Recordarme</label>
