--- a/views/profile-edit.ejs
+++ b/views/profile-edit.ejs
@@ -18,11 +18,23 @@
 							<label for="email">Correo electrónico</label>
 							<input required type="email" class="form-control" id="email" name="email"
 								placeholder="<%=locals.usuarios.email %>" class = "registroinput">
+								        <!-- Middlewars:  		
+											<% if (locals.errors && errors.email) { %>
+												<div class="error-msg">
+												<%= errors.email.msg %>                                
+                          
+													 <% } %> --> 
 						</div>
 						<div class="form-group">
 							<label for="password">Contraseña</label>
 							<input required type="password" class="form-control" id="password" name="password"
 								placeholder="locals.usuarios.password" class = "registroinput" >
+									 <!-- Middlewars:  		
+											<% if (locals.errors && errors.email) { %>
+												<div class="error-msg">
+												<%= errors.password.msg %>                                
+                          
+													 <% } %> -->
 						</div>
 						<div class="form-group">
 							<label for="birth-date">Fecha de nacimiento</label>
