--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,66 +1,77 @@
 <!DOCTYPE html>
 <html lang="es">
-	<% include ./partials/head %>
-	<body>
-		<% if(locals.usuarrios != undefined) { %>
-		<%- include('./partials/headerLogueado.ejs') %>
-		<% } else { %>
-			<%- include('./partials/header.ejs') %>
-			<% } %>
-			<section class="info-usuario container products-wrapper">
-				<div class="row">
-					<div class="img-container offset-3 col-2">
-						<img src="<%= usuario.photo %>" alt="foto de perfil" class="foto-perfil">
-					</div>
-					<div class="data-container col-6">
-						<div class="d-flex align-items-center ">
-							<h1 class="main-title">
-								<% if(idUsuario == datosUsuario.id) { %>
-									<h1 class="main-title"> <%= datosUsuario.username %>
-									
-									
-				
-										<a href="/profileEdit/">
-											<i class="fas fa-cog"></i>
-										</a>
-									</h1>
-										<% } else { %>
-				
-											<h1 class="main-title"> <%= datosUsuario.username %> </h1>
-											<% } %>
-								
-			</section>
-			<div class="container products-wrapper">
-				<div class="row">
-					<div class="col-12">
-						<h2 class="products-title">Mis productos: <%=datosUsuario.productos.length %></h2>
-						<p>Ordenados del más al menos reciente</p>
-					</div>
-					<div class="col-12 col-sm-6 col-lg-3">
-					<section class="bloque">
-						<% if (datosUsuario.productos.length > 0) { %>
+	<% include('./partials/head') %>
 
-							<% for (let i = datosUsuario.productos.length - 1; i >= 0; i--) { %>	<div class="col-12 col-sm-6 col-lg-3">
-						
-								<section class="product-box">
-									<a href="/productos/detalle/id/<%=datosUsuario.productos[i].id%>">
-								<figure class="product-box_image">
-									<img src="<%= datosUsuario.productos[i].photo %" alt="<%= datosUsuario.productos[i].nombreproducto %>">									
-								</figure>
+		<body>
+			<% if(locals.usuarios !=undefined) { %>
+				<%- include('./partials/headerLogueado.ejs') %>
+					<% } else { %>
+						<%- include('./partials/header.ejs') %>
+							<% } %>
+								<section class="info-usuario container products-wrapper">
+									<div class="row">
+										<div class="img-container offset-3 col-2">
+											<img src="<%= usuario.photo %>" alt="foto de perfil" class="foto-perfil">
+										</div>
+										<div class="data-container col-6">
+											<div class="d-flex align-items-center ">
+												<h1 class="main-title">
+													<% if(idUsuario==datosUsuario.id) { %>
+														<h1 class="main-title">
+															<%= datosUsuario.username %>
 
-								<a href= "/productos/detalle/id/<%=datosUsuario.productos[i].id%>">
-									<article class="product-box_data">
-										<h2> <%= datosUsuario.productos[i].producto%> </h2>
-									</article>
-								</a>
-							</section>
-						</div>
-						<% } %>
-					<% } %>				
-				</div>
-			</div>	
-		</section>
 
-			<%- include('partials/footer') %>
-	</body>
+
+																<a href="/profileEdit/">
+																	<i class="fas fa-cog"></i>
+																</a>
+														</h1>
+														<% } else { %>
+
+															<h1 class="main-title">
+																<%= datosUsuario.username %>
+															</h1>
+															<% } %>
+								</section>
+								<div class="container products-wrapper">
+									<div class="row">
+										<div class="col-12">
+											<h2 class="products-title">Mis productos: <%= datosUsuario.productos.length
+													%>
+											</h2>
+											<p>Ordenados del más al menos reciente</p>
+										</div>
+										<div class="col-12 col-sm-6 col-lg-3">
+											<section class="bloque">
+												<% if (datosUsuario.productos.length> 0) { %>
+													<% for (let i=datosUsuario.productos.length - 1; i>= 0; i--) { %>
+														<div class="col-12 col-sm-6 col-lg-3">
+															<section class="product-box">
+																<a
+																	href="/productos/detalle/id/<%=datosUsuario.productos[i].id%>">
+																	<figure class="product-box_image">
+																		<img src="<%= datosUsuario.productos[i].photo %>"
+																			alt="<%= datosUsuario.productos[i].nombreproducto %>">
+																	</figure>
+
+																	<a
+																		href="/productos/detalle/id/<%=datosUsuario.productos[i].id%>">
+																		<article class="product-box_data">
+																			<h2>
+																				<%= datosUsuario.productos[i].producto
+																					%>
+																			</h2>
+																		</article>
+																	</a>
+															</section>
+														</div>
+														<% } %>
+															<% } %>
+										</div>
+									</div>
+									</section>
+
+									<%- include('./partials/footer') %>
+		</body>
+
 </html>
