--- a/views/login.ejs
+++ b/views/login.ejs
@@ -12,22 +12,22 @@
               <div class="form-group">
                 <label for="email">Email</label>
                 <input required minlength="4" type="email" name="email" id="email" class="form-control" minlength="4">
-                  <!-- Middlewars:  				
+                  <!-- Middlewars: -->  				
                   <% if (locals.errors && errors.email) { %>
                   <div class="error-msg">
                     <%= errors.email.msg %>                                
                           
-                  <% } %> --> 
+                  <% } %> 
               </div>
               <div class="form-group">
                 <label for="password">Contraseña</label>
-                <input required minlength="4" type="password" name="password" id="password" class="form-control">
-                <!-- Middlewars:  				
+                <input required minlength="4" type="password" name="password" id="password" class="form-control", value="<%= locals.oldData && oldData.email ? oldData.email : null %">
+                <!-- Middlewars: -->  				
                   <% if (locals.errors && errors.password) { %>
                   <div class="error-msg">
                     <%= errors.password.msg %>                                
                           
-                  <% } %> --> 
+                  <% } %> 
                 </div>  
               </div>
               <div class="form-group">
