--- a/views/profile-edit.ejs
+++ b/views/profile-edit.ejs
@@ -17,28 +17,33 @@
 							<label for="name">Nombre</label>
 							<input required type="text" class="form-control" id="name" name="name"
 								placeholder="<%=locals.usuarrios.nombre %>" class = "registroinput">">
-						</div>
+										<!-- Middlewars: -->  		
+										<% if (locals.errors && errors.email) { %>
+											<div class="error-msg">
+											<%= errors.email.msg %>
+											<% } %>                                
+													  
+																				 
 						<div class="form-group">
 							<label for="email">Correo electrónico</label>
 							<input required type="email" class="form-control" id="email" name="email"
-								placeholder="<%=locals.usuarios.email %>" class = "registroinput">
-								        <!-- Middlewars:  		
+								placeholder="<%=locals.usuarios.email %>" class = "registroinput" value="<%= locals.oldData && oldData.email ? oldData.email : null %>">
+								        <!-- Middlewars: -->  		
 											<% if (locals.errors && errors.email) { %>
 												<div class="error-msg">
 												<%= errors.email.msg %>                                
                           
-													 <% } %> --> 
+													 <% } %>
 						</div>
 						<div class="form-group">
 							<label for="password">Contraseña</label>
 							<input required type="password" class="form-control" id="password" name="password"
 								placeholder="locals.usuarios.password" class = "registroinput" >
-									 <!-- Middlewars:  		
-											<% if (locals.errors && errors.email) { %>
+									 <!-- Middlewars: --> 		
+											<% if (locals.errors && errors.password) { %>
 												<div class="error-msg">
 												<%= errors.password.msg %>                                
-                          
-													 <% } %> -->
+													 <% } %> 
 						</div>
 						<div class="form-group">
 							<label for="birth-date">Fecha de nacimiento</label>
