--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
-  <%- include('partials/head') %>
+  <%- include('partials/head') %> 
   <body>
     <%- include('partials/header') %>
     <div class="container products-wrapper">
@@ -31,6 +31,12 @@
               name="email"
               placeholder="Ingresá tu correo electrónico"
             />
+            <!-- Middlewars: -->  				
+            <% if (locals.errors && errors.email) { %>
+              <div class="error-msg">
+                <%= errors.email.msg %>                                
+                      
+              <% } %> 
           </div>
           <div class="form-group">
             <label for="password">Contraseña</label>
@@ -41,8 +47,13 @@
               class="form-control"
               id="password"
               name="password"
-              placeholder="Ingresá tu contraseña"
-            />
+              placeholder="Ingresá tu contraseña"/>
+              <!-- Middlewars: -->  				
+              <% if (locals.errors && errors.password) { %>
+                <div class="error-msg">
+                  <%= errors.password.msg %>                                
+                        
+                <% } %> 
           </div>
           <div class="form-group">
             <label for="birth-date">Fecha de nacimiento</label>
@@ -51,8 +62,7 @@
               class="form-control"
               id="birthDate"
               name="birthDate"
-              placeholder="birth-date"
-            />
+              placeholder="birth-date"/> 
           </div>
           <div class="form-group">
             <label for="doc">Nro de Documento</label>
