--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,5 +1,4 @@
-[22:31, 24/6/2024] Victoria: Profile js
-[23:18, 24/6/2024] Victoria: <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="es">
   <%- include('partials/head') %>
     <body>
